force-app/main/default/objects/Expo_Fields_Controller__c/Expo_Fields_Controller__c.object-meta.xml
<CustomObject>
    <description>用于控制字段显示</description>
    <label>Expo Fields Controller</label>
    <nameField>
        <label>Expo Menu Controller Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expo Fields Controllers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>