force-app/main/default/objects/Expo_Fields_Controller__c/fields/Agree_Private_Policy__c.field-meta.xml
<CustomField>
    <fullName>Agree_Private_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree Private Policy</label>
    <type>Checkbox</type>
</CustomField>