force-app/main/default/objects/Expo_Fields_Controller__c/fields/Agree_Stored__c.field-meta.xml
<CustomField>
    <fullName>Agree_Stored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agree Stored</label>
    <type>Checkbox</type>
</CustomField>