force-app/main/default/objects/Expo_Fields_Controller__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branch</label>
    <type>Checkbox</type>
</CustomField>