force-app/main/default/objects/Expo_Fields_Controller__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Country</label>
    <type>Checkbox</type>
</CustomField>