force-app/main/default/objects/Expo_Fields_Controller__c/fields/Exhibition_Management__c.field-meta.xml
<CustomField>
    <fullName>Exhibition_Management__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Management</label>
    <referenceTo>ExpoInfo__c</referenceTo>
    <relationshipLabel>Expo Fields Controllers</relationshipLabel>
    <relationshipName>Expo_Fields_Controllers</relationshipName>
    <type>Lookup</type>
</CustomField>