force-app/main/default/objects/Expo_Fields_Controller__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <label>Fields</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agree_Private_Policy__c</fullName>
            </value>
            <value>
                <fullName>AgreeStored__c</fullName>
            </value>
            <value>
                <fullName>Approval_Opinion__c</fullName>
            </value>
            <value>
                <fullName>Approval_Status__c</fullName>
            </value>
            <value>
                <fullName>Approver__c</fullName>
            </value>
            <value>
                <fullName>AssociateWeight__c</fullName>
            </value>
            <value>
                <fullName>Attendance_Date__c</fullName>
            </value>
            <value>
                <fullName>Birthday__c</fullName>
            </value>
            <value>
                <fullName>Brand__c</fullName>
            </value>
            <value>
                <fullName>Certificate_Type__c</fullName>
            </value>
            <value>
                <fullName>Certificate_Type_Text__c</fullName>
            </value>
            <value>
                <fullName>Company__c</fullName>
            </value>
            <value>
                <fullName>Company_Abbr__c</fullName>
            </value>
            <value>
                <fullName>Contact_Name__c</fullName>
            </value>
            <value>
                <fullName>ContactEmail__c</fullName>
            </value>
            <value>
                <fullName>Counry__c</fullName>
            </value>
            <value>
                <fullName>Country_EN__c</fullName>
            </value>
            <value>
                <fullName>Deliverable__c</fullName>
            </value>
            <value>
                <fullName>Department__c</fullName>
            </value>
            <value>
                <fullName>Department_Code__c</fullName>
            </value>
            <value>
                <fullName>Department_Name__c</fullName>
            </value>
            <value>
                <fullName>Email__c</fullName>
            </value>
            <value>
                <fullName>First_Name__c</fullName>
            </value>
            <value>
                <fullName>Gender__c</fullName>
            </value>
            <value>
                <fullName>ID_Card_No__c</fullName>
            </value>
            <value>
                <fullName>Is_Present__c</fullName>
            </value>
            <value>
                <fullName>Is_Valid_Schengen_Visa__c</fullName>
            </value>
            <value>
                <fullName>Is_Valid_US_Schengen_Visa__c</fullName>
            </value>
            <value>
                <fullName>Is_Verify__c</fullName>
            </value>
            <value>
                <fullName>Is_Verify_Batch__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>