force-app/main/default/objects/Expo_Fields_Controller__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Name</label>
    <type>Checkbox</type>
</CustomField>