force-app/main/default/objects/Expo_Fields_Controller__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Name</label>
    <type>Checkbox</type>
</CustomField>