force-app/main/default/objects/Expo_Fields_Controller__c/fields/Product_line__c.field-meta.xml
<CustomField>
    <fullName>Product_line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product line</label>
    <type>Checkbox</type>
</CustomField>