force-app/main/default/objects/Expo_Fields_Controller__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remark</label>
    <type>Checkbox</type>
</CustomField>