force-app/main/default/objects/Expo_Fields_Controller__c/fields/Your_Resident_city__c.field-meta.xml
<CustomField>
    <fullName>Your_Resident_city__c</fullName>
    <defaultValue>false</defaultValue>
    <description>常驻城市</description>
    <label>Your Resident city</label>
    <type>Checkbox</type>
</CustomField>